# mlb-pitch-bot

./: .env.example  .gitignore  PROJECT_CONTEXT.md  README.md  eval_fb.py  launch_bot.sh  main.py  pyproject.toml  retrain_pipeline.sh
.github/workflows/: ci.yml
dashboard/: package-lock.json  package.json
dashboard/src/: App.jsx  index.css
notebooks/: eda_exploration.ipynb  model_monitoring.ipynb  model_prototype.ipynb  model_selection.ipynb  pytorch_experiment.ipynb
scripts/: generate_samples.py
src/: README.md  api_extractors.py  baseline_manager.py  batter_tendency_processing.py  bot.py  build_baseline_tendencies.py  constants.py  data_loader.py  database.py  dataset_generator.py  export_dashboard_data.py  features.py  inference.py  live_game_tracker.py  mlb_test.py  mock_pitch_event.json  nightly_monitor.py  train_alt_model.py  train_middle_model.py  train_model.py  utils.py  visualization.py
src/bot/: bot.py  live_game_tracker.py  nightly_monitor.py  signal_labels.py  utils.py  visualization.py
src/data/: api_extractors.py  database.py  dataset_generator.py
src/features/: baseline_manager.py  batter_tendency_processing.py  build_baseline_tendencies.py  features.py
src/model/: calibration.py  inference.py  train_model.py
tests/: test_fix.py
